--- a/src/main/resources/templates/GENPLC.html
+++ b/src/main/resources/templates/GENPLC.html
@@ -114,7 +114,7 @@
 
                                 <h5 class="card-title">MODERNIZACION DE SISTEMAS DE CONTROL</h5>
                                 <p class="card-text">10 años de experiencia a su servicio para llevar su industria al futuro. Ingenieria inversa,proyectos completos o modificaciones de sistemas existentes.</p>
-                                <a href=# type="button" class="btn btn-outline-light">ver videos de detalle</a>
+                                <a href="https://www.youtube.com/channel/UC0YFHlUHjdpzky8jQJ0cZzA" type="button" class="btn btn-outline-light">ver videos de detalle</a>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">AUTOMATIZACIÓN 4.0</h5>
                                 <p class="card-text">Programacion de controladores e interfaces hombre-maquina con los mejores estandares de la industria moderna.</p>
-                                <a href=# type="button" class="btn btn-outline-light" >ver videos de detalle</a>
+                                <a href="https://www.youtube.com/channel/UC0YFHlUHjdpzky8jQJ0cZzA" type="button" class="btn btn-outline-light" >ver videos de detalle</a>
                             </div>
                         </div>
 
@@ -170,7 +170,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">CAPACITACIÓN</h5>
                                 <p class="card-text">Cursos de programación de PLC/HMI. Presenciales o remotos,individuales o grupales.Con asistencia de profesional personalizado</p>
-                                <a href=# type="button" class="btn btn-outline-light" >Obtener mas información</a>
+                                <a href="https://wa.me/542612556493?text=Hola%20,te%20consulto%20por%20los%20cursos%20de%20capacitacion." type="button" class="btn btn-outline-light" >Obtener mas información</a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -232,7 +232,7 @@
                             </a>
                         </figure>
                     </div>
-                    <div class="col-4">
+                    <div class="col4">
                         <figure class="figure">
                             <a href="https://www.google.com/maps/place/Godoy+Cruz,+Mendoza/@-32.9288184,-68.8847157,13z/data=!3m1!4b1!4m5!3m4!1s0x967e095dea6a01e7:0x90fb57ac5758c337!8m2!3d-32.9286268!4d-68.8583963">
                                 <img src="ubicacion.jpg" width="50px" height="50px" class="figure-img img-fluid rounded" alt="imagen de ubicacion">
@@ -246,38 +246,11 @@
                 <br>
                 <br>
                 <br>
+                
+                <div class="imagen-clientes" align="center">
                 <h1 id="clientes" align="center"><u> Clientes y socios estrategicos </u> </h1>
                 <br>
-
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item-active" align="center">
-                            <img src="cliente1.png" class="d-block w-20 h-20" alt="AG tecnologia industrial">
-                        </div>
-                        <div class="carousel-item" align="center">
-                            <img src="cliente2.png" class="d-block w-60 h-30" alt="Bodega Santa Ana">
-                        </div>
-                        <div class="carousel-item" align="center">
-                            <img src="cliente3.png" class="d-block w-60 h-30" alt="Dinvent">
-                        </div>
-                        <div class="carousel-item" align="center">
-                            <img src="cliente4.png" class="d-block w-60 h-30" alt="Honeywell">
-                        </div>
-                        <div class="carousel-item" align="center">
-                            <img src="cliente5.png" class="d-block w-20 h-20" alt="Killa">
-                        </div>
-                        <div class="carousel-item" align="center"> 
-                            <img src="cliente6.png" class="d-block w-20 h-20" alt="Bodega Trivento">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                <img src="clientes.png" align="center" class="img-fluid" alt="Clientes">  
                 </div>
 
                 <br>
@@ -285,21 +258,73 @@
                 <br>
                 <h1 align="center"><u> Seguinos en las redes! </u> </h1>
                 <br>
+                
+                <div class="row" align="center">
+                    <div class="col-3">
+                        <figure class="figure">
+                            <a href="https://www.facebook.com/GENPLCautomatizacion">
+                                <img src="facebook.jpg" width="50px" height="50px" class="figure-img img-fluid rounded" alt="Facebook">
+                                
+                            </a>
+                        </figure>
+                    </div>
 
+                    <div class="col-2">
+                        <figure class="figure">
+                            <a href="https://www.instagram.com/genplcautomatizacion/">
+                                <img src="instagram.png" width="50px" height="50px" class="figure-img img-fluid rounded" alt="Instagram">
+
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="col-2">
+                        <figure class="figure">
+                            <a href="https://twitter.com/Genplc1">
+                                <img src="twitter.jpg" width="50px" height="50px" class="figure-img img-fluid rounded" alt="twitter">
+
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="col-2">
+                        <figure class="figure">
+                            <a href="https://www.linkedin.com/company/genplc">
+
+                                <img src="LinkedIn.jpg" width="50px" height="50px" class="figure-img img-fluid rounded" alt="LinkedIn">
+
+                            </a>
+                        </figure>
+                    </div>
+                    <div class="col-3">
+                        <figure class="figure">
+                            <a href="https://www.youtube.com/channel/UC0YFHlUHjdpzky8jQJ0cZzA">
+
+                                <img src="youtube.png" width="50px" height="50px" class="figure-img img-fluid rounded" alt="Canal de Youtube">
+
+                            </a>
+                        </figure>
+                    </div>
+
+                </div>
+                <br>
+                <br>
+                <div class="inicio" align="center">
+            <a class="text-white justify-content-center" href="#logo">Volver al inicio</a>
             </div>
-
+                <br>
+                <br>
+            </div>
             <footer>
-      <nav class="navbar bg-grey justify-content-center">
+                <nav class="navbar bg-grey justify-content-center">
 
-        <ul class="nav justify-content-center">
+                    <ul class="nav justify-content-center">
 
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#logo" tabindex="-1" > GENPLC </a>
-          </li>
-          
+                        <li class="nav-item">
+                            <a class="nav-link text-white" > GENPLC </a>
+                        </li>
 
-      </nav>
-    </footer>
+                    </ul>
+                </nav>
+            </footer>
 
         </div>
 
