--- a/src/main/resources/templates/GENPLC.html
+++ b/src/main/resources/templates/GENPLC.html
@@ -41,6 +41,11 @@
                              class="d-inline-block " alt="logo de GENPLC" weight="100" height="100"loading="lazy">
 
                     </a>
+                    <a  class="navbar-brand justify-content-center">
+                        <img id="desc" src="descripcionSinFondo.png" 
+                             class="d-inline-block " alt="GENPLC" weight="100" height="100"loading="lazy">
+
+                    </a>
                    
 
                     <ul class="nav justify-content-end">
@@ -99,11 +104,7 @@
                                 <p class="titulosCarrousel2">Clases individuales o grupales, presenciales o remotas</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="DESCRIPCION.png" class="d-block w-100" alt="logo de genplc">
-                            
-                        </div>
-                    </div>
+                                            </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
@@ -242,8 +243,10 @@
                     <textarea class="form-group col-md-6" type="text" name="consulta" rows="3"></textarea>
 
                     <br>
-                    <button type="submit" class="btn btn-outline-success">Enviar</button>
-                    <button type="reset" class="btn btn-outline-danger">Cancelar</button>
+                    
+                    <button id="btnCancelar" type="reset" class="btn btn-outline-danger">Cancelar</button>
+                    
+                    <button id="btnEnviar" type="submit" class="btn btn-outline-success"><strong>  Enviar  </strong></button>
                     <input type="hidden" name="_next" value="http://localhost:8080">
                     <input type="hidden" name="_captcha" value="false">
 
